# SO_2_Projekt_1

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Fork.cpp  Fork.h  Globals.h  Philosopher.cpp  Philosopher.h  RefPoint.cpp  RefPoint.h  Table.cpp  Table.h  VisibleObject.cpp  VisibleObject.h  main.cpp
